White space issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body{
 	padding-top: 75px;
 	/* height: 1000px; */
 }
+
 .navbar{
 	background: #0b0b0b;
 	border-color: #0b0b0b;
@@ -132,4 +133,16 @@ h3{
 footer.navbar{
 	margin-bottom: 0;
 }
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+	.fill-screen p{
+		font-size: 2.3em;
+		line-height: 40px;
+	}
+}
+	
+
 
